[gd_scene load_steps=8 format=3 uid="uid://t_side_test"]

[ext_resource type="PackedScene" uid="uid://cenemy" path="res://scenes/enemy.tscn" id="1_enemy"]
[ext_resource type="Script" path="res://scripts/test/t_side_test_scene.gd" id="2_test"]
[ext_resource type="PackedScene" path="res://resources/maps/dust3/dust3.glb" id="3_map"]
[ext_resource type="Script" path="res://scripts/map_collision_generator.gd" id="4_mapcol"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sky"]
sky_top_color = Color(0.4, 0.6, 0.9, 1)
sky_horizon_color = Color(0.7, 0.8, 0.9, 1)
ground_bottom_color = Color(0.2, 0.25, 0.35, 1)
ground_horizon_color = Color(0.5, 0.55, 0.6, 1)

[sub_resource type="Sky" id="Sky_sky"]
sky_material = SubResource("ProceduralSkyMaterial_sky")

[sub_resource type="Environment" id="Environment_env"]
background_mode = 2
sky = SubResource("Sky_sky")
ambient_light_source = 2
ambient_light_color = Color(0.5, 0.5, 0.6, 1)
ambient_light_energy = 0.2

[node name="TSideTest" type="Node3D"]
script = ExtResource("2_test")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_env")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707, 0, -0.707, 0.5, 0.707, 0.5, 0.5, -0.707, 0.5, 10, 15, 10)
light_color = Color(1.0, 0.95, 0.85, 1)
light_energy = 1.2
shadow_enabled = true
shadow_bias = 0.03
shadow_normal_bias = 1.5
shadow_blur = 1.0
directional_shadow_max_distance = 50.0
directional_shadow_mode = 2
directional_shadow_split_1 = 0.15
directional_shadow_split_2 = 0.35
directional_shadow_split_3 = 0.6
directional_shadow_blend_splits = true

[node name="Dust2Map" parent="." instance=ExtResource("3_map")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("4_mapcol")

[node name="T" type="Node3D" parent="."]

[node name="T1" parent="T" instance=ExtResource("1_enemy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23.2, 1, 5.6)

[node name="T2" parent="T" instance=ExtResource("1_enemy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 26.2, 1, 5.6)

[node name="T3" parent="T" instance=ExtResource("1_enemy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29.2, 1, 5.6)

[node name="T4" parent="T" instance=ExtResource("1_enemy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32.2, 1, 5.6)

[node name="T5" parent="T" instance=ExtResource("1_enemy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35.2, 1, 5.6)

[node name="TestUI" type="CanvasLayer" parent="."]

[node name="InfoLabel" type="Label" parent="TestUI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_font_sizes/font_size = 14
text = "T Side Test Scene
Loading..."
